# Multigrid_Nikhil_C-

./: .gitignore  CMakeLists.txt  Multigrid_function_wrapped.cpp  Multigrid_functions.cpp  Multigrid_functions.h  Poissons_SYCL.cpp  Poissons_SYCL.sln  Poissons_SYCL.vcxproj  Poissons_SYCL.vcxproj.filters  README.md  Testing_new_implementation.cpp  help.cpp  main.cpp  multigrid_2d_sycl_test_problem.py  parallel_operators.cpp  poisson.cpp  poisson.ufl  temp_wrapped.cpp
Testing Operators Performance/Restriction/Restriction_P_WO_OBJ_HPC/: res_parallel_wo_pobj.vtune
Testing Operators Performance/Restriction/Restriction_P_WO_OBJ_HPC/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
Testing Operators Performance/Restriction/Restriction_P_WO_OBJ_HPC/data.0/: map.events  perfcmd  sep.events  system-wide.perf  system-wide.perf.0  system-wide.perf.1  system-wide.perf.10  system-wide.perf.11  system-wide.perf.12  system-wide.perf.13  system-wide.perf.14  system-wide.perf.15  system-wide.perf.16  system-wide.perf.17  system-wide.perf.18  system-wide.perf.19  system-wide.perf.2  system-wide.perf.20  system-wide.perf.21  system-wide.perf.22  system-wide.perf.23  system-wide.perf.3  system-wide.perf.4  system-wide.perf.5  system-wide.perf.6  system-wide.perf.7  system-wide.perf.8  system-wide.perf.9  system-wide.stat.perf  systemcollector-6187-s001-n048.sc  userapicollector-6210-a779cdad-6210-a77b9d96.th  userapicollector-6210-a779cdad-6279-a7aef095.th  userapicollector-6210-a779cdad-6280-f4d66450.th  userapicollector-6210-a779cdad-6281-f4d5cad7.th  userapicollector-6210-a779cdad-6282-f4df81e4.th  userapicollector-6210-a779cdad-6283-f4e4262c.th  userapicollector-6210-a779cdad-6284-f4dd9753.th  userapicollector-6210-a779cdad-6285-f53d4fa6.th  userapicollector-6210-a779cdad-6286-f52d6502.th  userapicollector-6210-a779cdad-6287-f53b9b66.th  (+17 more)
Testing Operators Performance/Restriction/Restriction_P_W_OBJ_HPC/: res_parallel_w_pobj.vtune
Testing Operators Performance/Restriction/Restriction_P_W_OBJ_HPC/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
Testing Operators Performance/Restriction/Restriction_P_W_OBJ_HPC/data.0/: perfcmd  system-wide.perf  system-wide.perf.0  system-wide.perf.1  system-wide.perf.10  system-wide.perf.11  system-wide.perf.12  system-wide.perf.13  system-wide.perf.14  system-wide.perf.15  system-wide.perf.16  system-wide.perf.17  system-wide.perf.18  system-wide.perf.19  system-wide.perf.2  system-wide.perf.20  system-wide.perf.21  system-wide.perf.22  system-wide.perf.23  system-wide.perf.3  system-wide.perf.4  system-wide.perf.5  system-wide.perf.6  system-wide.perf.7  system-wide.perf.8  system-wide.perf.9  system-wide.stat.perf  systemcollector-7134-s001-n048.sc  userapicollector-7157-473cc81f-7157-473e4f52.th  userapicollector-7157-473cc81f-7253-47721d4c.th  userapicollector-7157-473cc81f-7254-67716f10.th  userapicollector-7157-473cc81f-7255-6774ea43.th  userapicollector-7157-473cc81f-7256-67788750.th  userapicollector-7157-473cc81f-7257-677c5e3f.th  userapicollector-7157-473cc81f-7258-6779ecdc.th  userapicollector-7157-473cc81f-7259-678af554.th  userapicollector-7157-473cc81f-7260-678d1c3f.th  userapicollector-7157-473cc81f-7261-678c5639.th  userapicollector-7157-473cc81f-7262-6786641d.th  userapicollector-7157-473cc81f-7263-678b8018.th  (+15 more)
Testing Operators Performance/Restriction/Restriction_P_W_OBJ_HPC/sqlite-db/: grouper.metadata
Testing Operators Performance/Restriction/Restriction_S_HPC/: res_serial.vtune
Testing Operators Performance/Restriction/Restriction_S_HPC/config/: analysis_type.cfg  collection.cfg  context_values.cfg  log.cfg  runsa.options
Testing Operators Performance/Restriction/Restriction_S_HPC/data.0/: perfcmd  system-wide.perf  system-wide.perf.0  system-wide.perf.1  system-wide.perf.10  system-wide.perf.11  system-wide.perf.12  system-wide.perf.13  system-wide.perf.14  system-wide.perf.15  system-wide.perf.16  system-wide.perf.17  system-wide.perf.18  system-wide.perf.19  system-wide.perf.2  system-wide.perf.20  system-wide.perf.21  system-wide.perf.22  system-wide.perf.23  system-wide.perf.3  (+8 more)
VTune Profiler Results/Poissons_SYCL/: Poissons_SYCL.vtuneproj
(+78 files in other folders)
